add_library(
  nano_store
  ledger_store.hpp
  ledger_store.cpp
  backend.hpp
  backend.cpp
  ledger/account.hpp
  ledger/account.cpp
  ledger/block.hpp
  ledger/block.cpp
  ledger/confirmation_height.hpp
  ledger/confirmation_height.cpp
  ledger/final_vote.hpp
  ledger/final_vote.cpp
  ledger/online_weight.hpp
  ledger/online_weight.cpp
  ledger/peer.hpp
  ledger/peer.cpp
  ledger/pending.hpp
  ledger/pending.cpp
  ledger/pruned.hpp
  ledger/pruned.cpp
  ledger/rep_weight.hpp
  ledger/rep_weight.cpp
  ledger/version.hpp
  ledger/version.cpp
  block_w_sideband.hpp
  common.hpp
  common.cpp
  db_val.hpp
  db_val_templ.hpp
  iterator.hpp
  meta.hpp
  meta.cpp
  fwd.hpp
  lmdb/backend_lmdb.hpp
  lmdb/backend_lmdb.cpp
  lmdb/db_val.hpp
  lmdb/iterator.hpp
  lmdb/iterator.cpp
  lmdb/lmdb_env.hpp
  lmdb/lmdb_env.cpp
  lmdb/transaction_lmdb.hpp
  lmdb/transaction_lmdb.cpp
  lmdb/utility.hpp
  lmdb/wallet_value.hpp
  lmdb/wallet_value.cpp
  rocksdb/backend_rocksdb.hpp
  rocksdb/backend_rocksdb.cpp
  rocksdb/db_val.hpp
  rocksdb/iterator.hpp
  rocksdb/iterator.cpp
  rocksdb/transaction_rocksdb.hpp
  rocksdb/transaction_rocksdb.cpp
  rocksdb/utility.hpp
  rocksdb/utility.cpp
  common.hpp
  tables.hpp
  transaction.hpp
  transaction.cpp
  txn_tracking.hpp
  txn_tracking.cpp
  typed_iterator.hpp
  typed_iterator.cpp
  typed_iterator_templ.hpp
  iterator.cpp
  reverse_iterator.hpp
  reverse_iterator_templ.hpp
  versioning.hpp
  versioning.cpp
  write_queue.hpp
  write_queue.cpp)

target_link_libraries(
  nano_store
  nano_lib
  Boost::circular_buffer
  Boost::endian
  Boost::iostreams
  Boost::multiprecision
  Boost::pool
  Boost::stacktrace
  Boost::variant)
